--- a/Education.Api/appsettings.Development.json
+++ b/Education.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "EducationDb": "Host=localhost;Port=5432;Database=EducationDb;Username=postgres;Password=yourpassword"
   }
 }
